--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.4.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
     "faker": "^4.1.0",
     "miragejs": "^0.1.35",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.6",
-    "react-scripts": "3.4.3",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
     "reselect": "^4.0.0",
     "seedrandom": "^3.0.5",
     "typescript": "^3.9.10"
@@ -40,6 +41,9 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.0.2"
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "prettier": "^2.0.2",
+    "tailwindcss": "^3.0.15"
   }
 }
